// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Rename suggestion change style when selected 1`] = `
<div
  aria-selected={true}
  className="sc-bdVaJa hTXxV"
>
  <p>
    Rename
  </p>
  <label>
    <input
      className="sc-bwzfXH fhlOTR"
      onChange={[Function]}
      type="text"
      value="node"
    />
  </label>
</div>
`;

exports[`Project Rename suggestion do not render with other suggestion 1`] = `
<div
  aria-selected={false}
  className="sc-bdVaJa hTXxV"
>
  <p>
    Rename
  </p>
  <label>
    <input
      className="sc-bwzfXH fhlOTR"
      onChange={[Function]}
      type="text"
      value="node"
    />
  </label>
</div>
`;

exports[`Project Rename suggestion render with rename suggestion 1`] = `
<div
  aria-selected={false}
  className="sc-bdVaJa hTXxV"
>
  <p>
    Rename
  </p>
  <label>
    <input
      className="sc-bwzfXH fhlOTR"
      onChange={[Function]}
      type="text"
      value="node"
    />
  </label>
</div>
`;
